--- a/package.json
+++ b/package.json
@@ -1,18 +1,43 @@
 {
   "name": "eng-agent",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "bin": {
+    "eng-agent": "./dist/cli.js"
+  },
   "scripts": {
+    "build": "tsc --project tsconfig.json",
+    "start": "node dist/cli.js",
+    "agent:requirements": "tsx src/cli.ts requirements",
+    "agent:tasks": "tsx src/cli.ts tasks",
+    "agent:full": "tsx src/cli.ts full",
+    "agent:init": "tsx src/cli.ts init",
+    "dev": "tsx src/cli.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "ai",
+    "agent",
+    "requirements",
+    "engineering",
+    "langchain",
+    "langgraph"
+  ],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "RE-Architect: AI Requirements Engineering Agent",
   "dependencies": {
     "@langchain/community": "^0.3.57",
     "@langchain/core": "^0.3.78",
     "@langchain/langgraph": "^0.4.9",
-    "@langchain/openai": "^0.6.14"
+    "@langchain/openai": "^0.6.14",
+    "commander": "^12.0.0",
+    "dotenv": "^16.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.7",
+    "tsc-alias": "^1.8.16",
+    "tsx": "^4.7.0",
+    "typescript": "^5.4.0"
   }
 }
